--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,8 @@
-# FastAPI & Uvicorn for API deployment
-fastapi
-uvicorn
-
-# Hugging Face Transformers & Tokenizers for NER model
-transformers
 torch
-tokenizers
-
-# gdown for downloading model from Google Drive
-gdown
-
-# Pydantic for request validation in FastAPI
+transformers
+tokenizers 
+seqeval
 pydantic
-
-# Additional dependencies (optional but recommended)
+fastapi
 numpy
-scipy
+gdown
